@@ -1368,7 +1368,7 @@ public class ExamService {
             studentParticipationRepository.addNumberOfExamExerciseParticipations(exerciseGroup);
         });
         // set transient number of registered users
-        examRepository.setNumberOfExamUsersForExams(Collections.singletonList(exam));
+        examRepository.setNumberOfExamUsersForExams(List.of(exam));
     }
 
     /**
@@ -1580,6 +1580,22 @@ public class ExamService {
                 int originalStudentWorkingTime = originalWorkingTimes.get(studentExam.getId());
                 examLiveEventsService.createAndSendWorkingTimeUpdateEvent(studentExam, studentExam.getWorkingTime(), originalStudentWorkingTime, true);
             }
+        }
+    }
+
+    /**
+     * Notifies all student exams of the given exam about a changed exam schedule (start/end date) while the working
+     * time stays the same. Sends each student their current (unchanged) working time together with the exam's new
+     * start and end dates, so a conducting student can refresh the pre-start countdown and the start-based content
+     * visibility. This complements {@link #updateStudentExamsAndRescheduleExercises}, which only runs when the working
+     * time itself changes. The exam's student exams must be loaded, and the exam must already carry the new dates.
+     *
+     * @param exam the exam with its student exams loaded
+     */
+    public void sendScheduleUpdateToStudentExams(Exam exam) {
+        for (var studentExam : exam.getStudentExams()) {
+            int workingTime = studentExam.getWorkingTime();
+            examLiveEventsService.createAndSendWorkingTimeUpdateEvent(studentExam, workingTime, workingTime, true);
         }
     }
 
